# ergodic_exploration

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/: explore.rviz  explore.yaml  explore_cart.yaml  explore_omni.yaml  information.rviz  information.yaml  test_explore.rviz
dev/: barrier.py  cart.py  control.py  controlKL.py  controlKLIVP.py  controlMPPIKL.py  controlSE2.py  ergodic_mppi.py  explore.py  fourier.py  mppi.py  omni.py  single_integrator.py  single_integrator_exploration.py  target_distribution.py  tests.py
include/ergodic_exploration/: basis.hpp  buffer.hpp  cart.hpp  collision.hpp  dynamic_window.hpp  ergodic_control.hpp  exploration.hpp  grid.hpp  integrator.hpp  mapping.hpp  numerics.hpp  omni.hpp  target.hpp  types.hpp
include/ergodic_exploration/models/: cart.hpp  omni.hpp
launch/: exploration.launch  exploration_test.launch  mutual_information.launch
maps/: cubicles.yaml  map1.pgm  map1.yaml  map2.pgm  map2.yaml  maze.pgm  maze.yaml
src/: exploration_cart_node.cpp  exploration_node.cpp  exploration_omni_node.cpp  mutual_information_node.cpp  test_node.cpp
src/ergodic_exploration/: basis.cpp  buffer.cpp  collision.cpp  dynamic_window.cpp  grid.cpp  integrator.cpp  mapping.cpp  numerics.cpp  target.cpp  types.cpp
test/: test_cart.cpp  test_grid.cpp  test_integrator.cpp  test_omni.cpp
